@@ -90,6 +90,7 @@ OpenLDAP 2.4.24 Engineering
 	Fixed slapo-refint with subtree rename (ITS#6730)
 	Fixed slapo-rwm double free (ITS#6720)
 	Fixed slapo-rwm crasher (ITS#6632)
+	Fixed slapo-rwm entry handling (ITS#6760)
 	Fixed slapo-sssvlv initialization (ITS#6649)
 	Fixed slapo-sssvlv to not advertise when unused (ITS#6647)
 	Fixed slapo-sssvlv fix result code (ITS#6685)
